[gd_scene load_steps=29 format=3 uid="uid://bk1ym4wivo7wl"]

[ext_resource type="Script" path="res://CharacterBody2D.gd" id="1_ysfub"]
[ext_resource type="Shader" path="res://Player.gdshader" id="2_3b3vh"]
[ext_resource type="Texture2D" uid="uid://cvnwynk7fulac" path="res://Art/Healthbar_outer.png" id="4_cpu0m"]
[ext_resource type="Texture2D" uid="uid://6vnayuuxol5y" path="res://Art/idle.png" id="4_wgaub"]
[ext_resource type="Texture2D" uid="uid://cfw3txdkagv4h" path="res://Art/Healthbar_inner.png" id="5_e3fyq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_eov6t"]
shader = ExtResource("2_3b3vh")
shader_parameter/onoff = false

[sub_resource type="AtlasTexture" id="AtlasTexture_hdp31"]
atlas = ExtResource("4_wgaub")
region = Rect2(0, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fj6y"]
atlas = ExtResource("4_wgaub")
region = Rect2(80, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmkvt"]
atlas = ExtResource("4_wgaub")
region = Rect2(160, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6bx7y"]
atlas = ExtResource("4_wgaub")
region = Rect2(240, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4x5m"]
atlas = ExtResource("4_wgaub")
region = Rect2(0, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_avylo"]
atlas = ExtResource("4_wgaub")
region = Rect2(80, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6hcp"]
atlas = ExtResource("4_wgaub")
region = Rect2(160, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3v25"]
atlas = ExtResource("4_wgaub")
region = Rect2(240, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfjfs"]
atlas = ExtResource("4_wgaub")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qcyno"]
atlas = ExtResource("4_wgaub")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_yk8ih"]
atlas = ExtResource("4_wgaub")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_m827q"]
atlas = ExtResource("4_wgaub")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ag1ot"]
atlas = ExtResource("4_wgaub")
region = Rect2(0, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_bymxs"]
atlas = ExtResource("4_wgaub")
region = Rect2(80, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_bestn"]
atlas = ExtResource("4_wgaub")
region = Rect2(160, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ceuc1"]
atlas = ExtResource("4_wgaub")
region = Rect2(240, 240, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_kxdg5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdp31")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fj6y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmkvt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6bx7y")
}],
"loop": true,
"name": &"idle_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4x5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_avylo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6hcp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3v25")
}],
"loop": true,
"name": &"idle_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfjfs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qcyno")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yk8ih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m827q")
}],
"loop": true,
"name": &"idle_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ag1ot")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bymxs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bestn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ceuc1")
}],
"loop": true,
"name": &"idle_up",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mlwqd"]
size = Vector2(23, 15.125)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_frcl6"]
size = Vector2(15.75, 28.25)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1jflg"]
texture = ExtResource("4_cpu0m")
region_rect = Rect2(77.6266, 0, 800.622, 316)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sl7b7"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
texture = ExtResource("5_e3fyq")
region_rect = Rect2(137, 0, 686, 316)

[sub_resource type="CircleShape2D" id="CircleShape2D_twyse"]
radius = 58.6115

[node name="Player" type="CharacterBody2D"]
scale = Vector2(4, 4)
script = ExtResource("1_ysfub")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_eov6t")
position = Vector2(0, -0.5)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_kxdg5")
animation = &"idle_down"
autoplay = "idle_right"
offset = Vector2(-0.583333, -5.91667)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4.9375)
shape = SubResource("RectangleShape2D_mlwqd")

[node name="HurtBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-0.375, -15.625)
shape = SubResource("RectangleShape2D_frcl6")
debug_color = Color(1, 0.00784314, 0.0431373, 0.419608)

[node name="ProgressBar" type="ProgressBar" parent="."]
modulate = Color(0, 0, 0, 1)
offset_left = -17.0
offset_top = -57.0
offset_right = 18.0
offset_bottom = -46.0
pivot_offset = Vector2(-46.5, 21.5)
theme_override_styles/background = SubResource("StyleBoxTexture_1jflg")
theme_override_styles/fill = SubResource("StyleBoxTexture_sl7b7")
max_value = 3.0
show_percentage = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Pickup_Range" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pickup_Range"]
position = Vector2(0, -16)
shape = SubResource("CircleShape2D_twyse")
debug_color = Color(0, 0.639216, 0.364706, 0.419608)

[connection signal="body_exited" from="HurtBox" to="." method="_on_hurt_box_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Pickup_Range" to="." method="_on_pickup_range_area_entered"]
[connection signal="body_entered" from="Pickup_Range" to="." method="_on_pickup_range_body_entered"]
